--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Galería</title>
+    <link rel="icon" href="appearance/photo/icon/gallery.png">
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -49,7 +50,12 @@
                     </div>
                 </li>
                 <li class="nav-item"> <a class="nav-link" href="#gMain">Galería</a> </li>
-                <li class="nav-item"> <a class="nav-link" href=" form.html">Formulario</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="login.html">Iniciar Sección</a> </li>
+                <li class="nav-item">
+                    <a type="application/rss+xml" href="news.xml">
+                        <img alt="image" src="appearance/photo/icon/rss.png" id="rss" class="img-fluid">
+                    </a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -83,7 +89,7 @@
             <p class="center"> <strong>Mazed</strong> </p>
         </div>
     </div>
-    
+
     <div class="row">
         <div class="col-sm-2"> </div>
         <div class="col-sm-2">
@@ -100,7 +106,8 @@
         </div>
         <div class="col-sm-2">
             <button id="fail2" type="button" class="btn btn-dark" data-toggle="modal" data-target="#neighbor">
-                <img src="appearance/photo/gallery/neighborsHumano.jpg" alt="Error 404: Image Not Found" class="img-fluid">
+                <img src="appearance/photo/gallery/neighborsHumano.jpg" alt="Error 404: Image Not Found"
+                    class="img-fluid">
             </button>
             <p class="center"> <strong>Neighbor</strong> </p>
         </div>
@@ -127,7 +134,8 @@
         </div>
         <div class="col-sm-2">
             <button id="fail6" type="button" class="btn btn-dark" data-toggle="modal" data-target="#renc">
-                <img src="appearance/photo/gallery/reincarnation.jpg" alt="Error 404: Image Not Found" class="img-fluid">
+                <img src="appearance/photo/gallery/reincarnation.jpg" alt="Error 404: Image Not Found"
+                    class="img-fluid">
             </button>
             <p class="center"> <strong>Reincarnation</strong> </p>
         </div>
@@ -138,7 +146,7 @@
             <p class="center"> <strong>Inmortal</strong> </p>
         </div>
     </div>
-    
+
 
     <div class="modal fade" id="trion">
         <div class="modal-dialog modal-lg">
@@ -232,7 +240,8 @@
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-dialog modal-lg">
-                    <img src="appearance/photo/gallery/neighborsHumano.jpg" alt="Error 404: Image Not Found" class="img-fluid">
+                    <img src="appearance/photo/gallery/neighborsHumano.jpg" alt="Error 404: Image Not Found"
+                        class="img-fluid">
                 </div>
             </div>
         </div>
@@ -288,7 +297,8 @@
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-dialog modal-lg">
-                    <img src="appearance/photo/gallery/reincarnation.jpg" alt="Error 404: Image Not Found" class="img-fluid">
+                    <img src="appearance/photo/gallery/reincarnation.jpg" alt="Error 404: Image Not Found"
+                        class="img-fluid">
                 </div>
             </div>
         </div>
