--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>World Trigger</title>
+    <link rel="icon" href="appearance/photo/icon/main.png">
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -22,9 +23,9 @@
     <link rel="stylesheet" href="appearance/styles.css">
 </head>
 
-<body data-spy="scroll" data-target=".navbar"> 
+<body data-spy="scroll" data-target=".navbar">
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="#section0">World Trigger</a>
+        <a class="navbar-brand" href="#section0"><b></b> World Trigger</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -49,7 +50,12 @@
                     </div>
                 </li>
                 <li class="nav-item"> <a class="nav-link" href="gallery.html">Galería</a> </li>
-                <li class="nav-item"> <a class="nav-link" href=" form.html">Formulario</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="login.html">Iniciar Sección</a> </li>
+                <li class="nav-item">    
+                    <a type="application/rss+xml" href="news.xml">
+                        <img alt="image" src="appearance/photo/icon/rss.png" id="rss" class="img-fluid">
+                    </a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -171,8 +177,7 @@
             </div>
         </div>
     </div>
-
-
+    
     <div class="d-none d-md-block">
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
             <ul class="navbar-nav">
@@ -185,7 +190,6 @@
             </ul>
         </nav>
     </div>
-
     <br />
     <br />
 </body>
